YuzuDraw/Serialization/Generated/YuzuDraw/Serialization/Grammar/YuzuDrawDSLParser.swift
// Generated from YuzuDraw/Serialization/Grammar/YuzuDrawDSL.g4 by ANTLR 4.13.2
@preconcurrency import Antlr4

open class YuzuDrawDSLParser: Parser {

	nonisolated(unsafe) internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = YuzuDrawDSLParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(YuzuDrawDSLParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	nonisolated(unsafe) internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, LAYER = 1, GROUP = 2, RECTANGLE = 3, RECT = 4, BOX = 5, 
                 ARROW = 6, TEXT = 7, PENCIL = 8, FROM = 9, TO = 10, AT = 11, 
                 SIZE = 12, STYLE = 13, STROKE = 14, FILL = 15, BORDER = 16, 
                 NOBORDER = 17, BORDERS = 18, LINE = 19, DASH = 20, GAP = 21, 
                 HALIGN = 22, VALIGN = 23, TEXTONBORDER = 24, PADDING = 25, 
                 SHADOW = 26, BORDERCOLOR = 27, FILLCOLOR = 28, TEXTCOLOR = 29, 
                 STROKECOLOR = 30, LABELCOLOR = 31, FLOAT = 32, LABEL = 33, 
                 CHAR = 34, IDKW = 35, VISIBLE_KW = 36, HIDDEN_KW = 37, 
                 LOCKED = 38, SINGLE = 39, DOUBLE = 40, ROUNDED = 41, HEAVY = 42, 
                 OPAQUE = 43, BLOCK = 44, CHARACTER = 45, SOLID = 46, TRANSPARENT = 47, 
                 NONE = 48, DASHED = 49, LEFT = 50, RIGHT = 51, TOP = 52, 
                 BOTTOM = 53, CENTER = 54, MIDDLE = 55, LIGHT = 56, DARK = 57, 
                 TRUE = 58, FALSE = 59, RIGHT_OF = 60, BELOW = 61, LEFT_OF = 62, 
                 ABOVE = 63, CELLS = 64, XKW = 65, YKW = 66, COMMA = 67, 
                 DOT = 68, SEMI = 69, LBRACK = 70, RBRACK = 71, PLUS = 72, 
                 MINUS = 73, STRING = 74, COLORHEX = 75, DIMENSION_LITERAL = 76, 
                 INTEGER = 77, IDENTIFIER = 78, NEWLINE = 79, WS = 80, LINE_COMMENT = 81
	}

	public
	static let RULE_document = 0, RULE_statement = 1, RULE_layerStatement = 2, 
            RULE_groupStatement = 3, RULE_rectangleStatement = 4, RULE_rectKeyword = 5, 
            RULE_rectangleClause = 6, RULE_arrowStatement = 7, RULE_arrowClause = 8, 
            RULE_textStatement = 9, RULE_pencilStatement = 10, RULE_pencilCell = 11, 
            RULE_idClause = 12, RULE_atClause = 13, RULE_sizeClause = 14, 
            RULE_styleClause = 15, RULE_strokeClause = 16, RULE_fillClause = 17, 
            RULE_borderClause = 18, RULE_noborderClause = 19, RULE_bordersClause = 20, 
            RULE_lineClause = 21, RULE_dashClause = 22, RULE_gapClause = 23, 
            RULE_halignClause = 24, RULE_valignClause = 25, RULE_textOnBorderClause = 26, 
            RULE_paddingClause = 27, RULE_shadowClause = 28, RULE_shadowOffsetClause = 29, 
            RULE_borderColorClause = 30, RULE_fillColorClause = 31, RULE_textColorClause = 32, 
            RULE_strokeColorClause = 33, RULE_labelColorClause = 34, RULE_floatClause = 35, 
            RULE_semanticPositionClause = 36, RULE_directionKeyword = 37, 
            RULE_labelClause = 38, RULE_positionExpr = 39, RULE_endpointExpr = 40, 
            RULE_referenceExpr = 41, RULE_offsetExpr = 42, RULE_referenceTarget = 43, 
            RULE_coordinate = 44, RULE_dimension = 45, RULE_stringValue = 46, 
            RULE_identifier = 47, RULE_colorValue = 48, RULE_strokeStyleValue = 49, 
            RULE_fillModeValue = 50, RULE_borderLineStyleValue = 51, RULE_horizontalAlignValue = 52, 
            RULE_verticalAlignValue = 53, RULE_shadowStyleValue = 54, RULE_sideValue = 55, 
            RULE_boolValue = 56, RULE_signedInt = 57, RULE_sign = 58, RULE_intValue = 59

	public
	static let ruleNames: [String] = [
		"document", "statement", "layerStatement", "groupStatement", "rectangleStatement", 
		"rectKeyword", "rectangleClause", "arrowStatement", "arrowClause", "textStatement", 
		"pencilStatement", "pencilCell", "idClause", "atClause", "sizeClause", 
		"styleClause", "strokeClause", "fillClause", "borderClause", "noborderClause", 
		"bordersClause", "lineClause", "dashClause", "gapClause", "halignClause", 
		"valignClause", "textOnBorderClause", "paddingClause", "shadowClause", 
		"shadowOffsetClause", "borderColorClause", "fillColorClause", "textColorClause", 
		"strokeColorClause", "labelColorClause", "floatClause", "semanticPositionClause", 
		"directionKeyword", "labelClause", "positionExpr", "endpointExpr", "referenceExpr", 
		"offsetExpr", "referenceTarget", "coordinate", "dimension", "stringValue", 
		"identifier", "colorValue", "strokeStyleValue", "fillModeValue", "borderLineStyleValue", 
		"horizontalAlignValue", "verticalAlignValue", "shadowStyleValue", "sideValue", 
		"boolValue", "signedInt", "sign", "intValue"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'layer'", "'group'", "'rectangle'", "'rect'", "'box'", "'arrow'", 
		"'text'", "'pencil'", "'from'", "'to'", "'at'", "'size'", "'style'", "'stroke'", 
		"'fill'", "'border'", "'noborder'", "'borders'", "'line'", "'dash'", "'gap'", 
		"'halign'", "'valign'", "'textOnBorder'", "'padding'", "'shadow'", "'borderColor'", 
		"'fillColor'", "'textColor'", "'strokeColor'", "'labelColor'", "'float'", 
		"'label'", "'char'", "'id'", "'visible'", "'hidden'", "'locked'", "'single'", 
		"'double'", "'rounded'", "'heavy'", "'opaque'", "'block'", "'character'", 
		"'solid'", "'transparent'", "'none'", "'dashed'", "'left'", "'right'", 
		"'top'", "'bottom'", "'center'", "'middle'", "'light'", "'dark'", "'true'", 
		"'false'", "'right-of'", "'below'", "'left-of'", "'above'", "'cells'", 
		nil, "'y'", "','", "'.'", "';'", "'['", "']'", "'+'", "'-'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "LAYER", "GROUP", "RECTANGLE", "RECT", "BOX", "ARROW", "TEXT", "PENCIL", 
		"FROM", "TO", "AT", "SIZE", "STYLE", "STROKE", "FILL", "BORDER", "NOBORDER", 
		"BORDERS", "LINE", "DASH", "GAP", "HALIGN", "VALIGN", "TEXTONBORDER", 
		"PADDING", "SHADOW", "BORDERCOLOR", "FILLCOLOR", "TEXTCOLOR", "STROKECOLOR", 
		"LABELCOLOR", "FLOAT", "LABEL", "CHAR", "IDKW", "VISIBLE_KW", "HIDDEN_KW", 
		"LOCKED", "SINGLE", "DOUBLE", "ROUNDED", "HEAVY", "OPAQUE", "BLOCK", "CHARACTER", 
		"SOLID", "TRANSPARENT", "NONE", "DASHED", "LEFT", "RIGHT", "TOP", "BOTTOM", 
		"CENTER", "MIDDLE", "LIGHT", "DARK", "TRUE", "FALSE", "RIGHT_OF", "BELOW", 
		"LEFT_OF", "ABOVE", "CELLS", "XKW", "YKW", "COMMA", "DOT", "SEMI", "LBRACK", 
		"RBRACK", "PLUS", "MINUS", "STRING", "COLORHEX", "DIMENSION_LITERAL", 
		"INTEGER", "IDENTIFIER", "NEWLINE", "WS", "LINE_COMMENT"
	]
	public
	nonisolated(unsafe) static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "YuzuDrawDSL.g4" }

	override open
	func getRuleNames() -> [String] { return YuzuDrawDSLParser.ruleNames }

	override open
	func getSerializedATN() -> [Int] { return YuzuDrawDSLParser._serializedATN }

	override open
	func getATN() -> ATN { return YuzuDrawDSLParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return YuzuDrawDSLParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,YuzuDrawDSLParser._ATN,YuzuDrawDSLParser._decisionToDFA, YuzuDrawDSLParser._sharedContextCache)
	}


	public class DocumentContext: ParserRuleContext {
			open
			func EOF() -> TerminalNode? {
				return getToken(YuzuDrawDSLParser.Tokens.EOF.rawValue, 0)
			}
			open
			func NEWLINE() -> [TerminalNode] {
				return getTokens(YuzuDrawDSLParser.Tokens.NEWLINE.rawValue)
			}
			open
			func NEWLINE(_ i:Int) -> TerminalNode? {
				return getToken(YuzuDrawDSLParser.Tokens.NEWLINE.rawValue, i)
			}
			open
			func statement() -> [StatementContext] {
				return getRuleContexts(StatementContext.self)
			}
			open
			func statement(_ i: Int) -> StatementContext? {
				return getRuleContext(StatementContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return YuzuDrawDSLParser.RULE_document
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? YuzuDrawDSLListener {
				listener.enterDocument(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? YuzuDrawDSLListener {
				listener.exitDocument(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? YuzuDrawDSLVisitor {
			    return visitor.visitDocument(self)
			}
			else if let visitor = visitor as? YuzuDrawDSLBaseVisitor {
			    return visitor.visitDocument(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func document() throws -> DocumentContext {
		var _localctx: DocumentContext
		_localctx = DocumentContext(_ctx, getState())
		try enterRule(_localctx, 0, YuzuDrawDSLParser.RULE_document)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
			var _alt:Int
		 	try enterOuterAlt(_localctx, 1)
		 	setState(126)
		 	try _errHandler.sync(self)
		 	_alt = try getInterpreter().adaptivePredict(_input,1,_ctx)
		 	while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
		 		if ( _alt==1 ) {
		 			setState(121)
		 			try _errHandler.sync(self)
		 			_la = try _input.LA(1)
		 			if (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 510) != 0)) {
		 				setState(120)
		 				try statement()

		 			}

		 			setState(123)
		 			try match(YuzuDrawDSLParser.Tokens.NEWLINE.rawValue)

		 	 
		 		}
		 		setState(128)
		 		try _errHandler.sync(self)
		 		_alt = try getInterpreter().adaptivePredict(_input,1,_ctx)
		 	}
		 	setState(130)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 510) != 0)) {
		 		setState(129)
		 		try statement()

		 	}

		 	setState(132)
		 	try match(YuzuDrawDSLParser.Tokens.EOF.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class StatementContext: ParserRuleContext {
			open
			func layerStatement() -> LayerStatementContext? {
				return getRuleContext(LayerStatementContext.self, 0)
			}
			open
			func groupStatement() -> GroupStatementContext? {
				return getRuleContext(GroupStatementContext.self, 0)
			}
			open
			func rectangleStatement() -> RectangleStatementContext? {
				return getRuleContext(RectangleStatementContext.self, 0)
			}
			open
			func arrowStatement() -> ArrowStatementContext? {
				return getRuleContext(ArrowStatementContext.self, 0)
			}
			open
			func textStatement() -> TextStatementContext? {
				return getRuleContext(TextStatementContext.self, 0)
			}
			open
			func pencilStatement() -> PencilStatementContext? {
				return getRuleContext(PencilStatementContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return YuzuDrawDSLParser.RULE_statement
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? YuzuDrawDSLListener {
				listener.enterStatement(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? YuzuDrawDSLListener {
				listener.exitStatement(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? YuzuDrawDSLVisitor {
			    return visitor.visitStatement(self)
			}
			else if let visitor = visitor as? YuzuDrawDSLBaseVisitor {
			    return visitor.visitStatement(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func statement() throws -> StatementContext {
		var _localctx: StatementContext
		_localctx = StatementContext(_ctx, getState())
		try enterRule(_localctx, 2, YuzuDrawDSLParser.RULE_statement)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(140)
		 	try _errHandler.sync(self)
		 	switch (YuzuDrawDSLParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .LAYER:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(134)
		 		try layerStatement()

		 		break

		 	case .GROUP:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(135)
		 		try groupStatement()

		 		break
		 	case .RECTANGLE:fallthrough
		 	case .RECT:fallthrough
		 	case .BOX:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(136)
		 		try rectangleStatement()

		 		break

		 	case .ARROW:
		 		try enterOuterAlt(_localctx, 4)
		 		setState(137)
		 		try arrowStatement()

		 		break

		 	case .TEXT:
		 		try enterOuterAlt(_localctx, 5)
		 		setState(138)
		 		try textStatement()

		 		break

		 	case .PENCIL:
		 		try enterOuterAlt(_localctx, 6)
		 		setState(139)
		 		try pencilStatement()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class LayerStatementContext: ParserRuleContext {
			open
			func LAYER() -> TerminalNode? {
				return getToken(YuzuDrawDSLParser.Tokens.LAYER.rawValue, 0)
			}
			open
			func stringValue() -> StringValueContext? {
				return getRuleContext(StringValueContext.self, 0)
			}
			open
			func LOCKED() -> TerminalNode? {
				return getToken(YuzuDrawDSLParser.Tokens.LOCKED.rawValue, 0)
			}
			open
			func VISIBLE_KW() -> [TerminalNode] {
				return getTokens(YuzuDrawDSLParser.Tokens.VISIBLE_KW.rawValue)
			}
			open
			func VISIBLE_KW(_ i:Int) -> TerminalNode? {
				return getToken(YuzuDrawDSLParser.Tokens.VISIBLE_KW.rawValue, i)
			}
			open
			func HIDDEN_KW() -> [TerminalNode] {
				return getTokens(YuzuDrawDSLParser.Tokens.HIDDEN_KW.rawValue)
			}
			open
			func HIDDEN_KW(_ i:Int) -> TerminalNode? {
				return getToken(YuzuDrawDSLParser.Tokens.HIDDEN_KW.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return YuzuDrawDSLParser.RULE_layerStatement
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? YuzuDrawDSLListener {
				listener.enterLayerStatement(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? YuzuDrawDSLListener {
				listener.exitLayerStatement(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? YuzuDrawDSLVisitor {
			    return visitor.visitLayerStatement(self)
			}
			else if let visitor = visitor as? YuzuDrawDSLBaseVisitor {
			    return visitor.visitLayerStatement(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func layerStatement() throws -> LayerStatementContext {
		var _localctx: LayerStatementContext
		_localctx = LayerStatementContext(_ctx, getState())
		try enterRule(_localctx, 4, YuzuDrawDSLParser.RULE_layerStatement)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(160)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,6, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(142)
		 		try match(YuzuDrawDSLParser.Tokens.LAYER.rawValue)
		 		setState(143)
		 		try stringValue()
		 		setState(147)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		while (_la == YuzuDrawDSLParser.Tokens.VISIBLE_KW.rawValue || _la == YuzuDrawDSLParser.Tokens.HIDDEN_KW.rawValue) {
		 			setState(144)
		 			_la = try _input.LA(1)
		 			if (!(_la == YuzuDrawDSLParser.Tokens.VISIBLE_KW.rawValue || _la == YuzuDrawDSLParser.Tokens.HIDDEN_KW.rawValue)) {
		 			try _errHandler.recoverInline(self)
		 			}
		 			else {
		 				_errHandler.reportMatch(self)
		 				try consume()
		 			}


		 			setState(149)
		 			try _errHandler.sync(self)
		 			_la = try _input.LA(1)
		 		}
		 		setState(150)
		 		try match(YuzuDrawDSLParser.Tokens.LOCKED.rawValue)

		 		break
		 	case 2:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(152)
		 		try match(YuzuDrawDSLParser.Tokens.LAYER.rawValue)
		 		setState(153)
		 		try stringValue()
		 		setState(157)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		while (_la == YuzuDrawDSLParser.Tokens.VISIBLE_KW.rawValue || _la == YuzuDrawDSLParser.Tokens.HIDDEN_KW.rawValue) {
		 			setState(154)
		 			_la = try _input.LA(1)
		 			if (!(_la == YuzuDrawDSLParser.Tokens.VISIBLE_KW.rawValue || _la == YuzuDrawDSLParser.Tokens.HIDDEN_KW.rawValue)) {
		 			try _errHandler.recoverInline(self)
		 			}
		 			else {
		 				_errHandler.reportMatch(self)
		 				try consume()
		 			}


		 			setState(159)
		 			try _errHandler.sync(self)
		 			_la = try _input.LA(1)
		 		}

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class GroupStatementContext: ParserRuleContext {
			open
			func GROUP() -> TerminalNode? {
				return getToken(YuzuDrawDSLParser.Tokens.GROUP.rawValue, 0)
			}
			open
			func stringValue() -> StringValueContext? {
				return getRuleContext(StringValueContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return YuzuDrawDSLParser.RULE_groupStatement
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? YuzuDrawDSLListener {
				listener.enterGroupStatement(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? YuzuDrawDSLListener {
				listener.exitGroupStatement(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? YuzuDrawDSLVisitor {
			    return visitor.visitGroupStatement(self)
			}
			else if let visitor = visitor as? YuzuDrawDSLBaseVisitor {
			    return visitor.visitGroupStatement(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func groupStatement() throws -> GroupStatementContext {
		var _localctx: GroupStatementContext
		_localctx = GroupStatementContext(_ctx, getState())
		try enterRule(_localctx, 6, YuzuDrawDSLParser.RULE_groupStatement)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(162)
		 	try match(YuzuDrawDSLParser.Tokens.GROUP.rawValue)
		 	setState(163)
		 	try stringValue()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class RectangleStatementContext: ParserRuleContext {
			open
			func rectKeyword() -> RectKeywordContext? {
				return getRuleContext(RectKeywordContext.self, 0)
			}
			open
			func stringValue() -> StringValueContext? {
				return getRuleContext(StringValueContext.self, 0)
			}
			open
			func rectangleClause() -> [RectangleClauseContext] {
				return getRuleContexts(RectangleClauseContext.self)
			}
			open
			func rectangleClause(_ i: Int) -> RectangleClauseContext? {
				return getRuleContext(RectangleClauseContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return YuzuDrawDSLParser.RULE_rectangleStatement
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? YuzuDrawDSLListener {
				listener.enterRectangleStatement(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? YuzuDrawDSLListener {
				listener.exitRectangleStatement(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? YuzuDrawDSLVisitor {
			    return visitor.visitRectangleStatement(self)
			}
			else if let visitor = visitor as? YuzuDrawDSLBaseVisitor {
			    return visitor.visitRectangleStatement(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func rectangleStatement() throws -> RectangleStatementContext {
		var _localctx: RectangleStatementContext
		_localctx = RectangleStatementContext(_ctx, getState())
		try enterRule(_localctx, 8, YuzuDrawDSLParser.RULE_rectangleStatement)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(165)
		 	try rectKeyword()
		 	setState(166)
		 	try stringValue()
		 	setState(170)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & -1152921464878401536) != 0)) {
		 		setState(167)
		 		try rectangleClause()


		 		setState(172)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class RectKeywordContext: ParserRuleContext {
			open
			func RECT() -> TerminalNode? {
				return getToken(YuzuDrawDSLParser.Tokens.RECT.rawValue, 0)
			}
			open
			func RECTANGLE() -> TerminalNode? {
				return getToken(YuzuDrawDSLParser.Tokens.RECTANGLE.rawValue, 0)
			}
			open
			func BOX() -> TerminalNode? {
				return getToken(YuzuDrawDSLParser.Tokens.BOX.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return YuzuDrawDSLParser.RULE_rectKeyword
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? YuzuDrawDSLListener {
				listener.enterRectKeyword(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? YuzuDrawDSLListener {
				listener.exitRectKeyword(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? YuzuDrawDSLVisitor {
			    return visitor.visitRectKeyword(self)
			}
			else if let visitor = visitor as? YuzuDrawDSLBaseVisitor {
			    return visitor.visitRectKeyword(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func rectKeyword() throws -> RectKeywordContext {
		var _localctx: RectKeywordContext
		_localctx = RectKeywordContext(_ctx, getState())
		try enterRule(_localctx, 10, YuzuDrawDSLParser.RULE_rectKeyword)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(173)
		 	_la = try _input.LA(1)
		 	if (!(((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 56) != 0))) {
		 	try _errHandler.recoverInline(self)
		 	}
		 	else {
		 		_errHandler.reportMatch(self)
		 		try consume()
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
